app/portfolio/components/project-hub/carousel/projectCarousel.scss
@use '/app/base/sass/util/functions' as f;
@use '/app/portfolio/scss/portfolioStyles' as s;

@keyframes mainAnimatorOut {
  0% {
    trasform: scale(0);
  }
  33% {
    transform: scale(0.8);
    transform: translateY(0) scale(0.8);
    opacity: 1;
  }
  66% {
    opacity: 0;
  }
  100% {
    transform: translateY(-100%) scale(0.8);
    opacity: 0;
  }
}

@keyframes mainAnimatorIn {
  0% {
    transform: translateY(100%) scale(0.8);
    opacity: 0;
  }
  33% {
    opacity: 0;
  }
  66% {
    transform: translateY(0) scale(0.8);
    opacity: 1;
  }
  100% {
    trasform: scale(0);
  }
}

@keyframes mainAnimatorRight {
  0% {
    trasform: scale(0);
  }
  33% {
    transform: scale(0.8);
    transform: translateX(0) scale(0.8);
    opacity: 1;
  }
  66% {
    opacity: 0;
  }
  100% {
    transform: translateX(-100%) scale(0.8);
    opacity: 0;
  }
}

.projectHub {
  display: flex;
  flex-direction: column;
  overflow: visible;
  @media (width <= 1480px) {
    height: max-content;
  }
  & h2 {
    display: none;
  }
  & footer {
    @media (width <= 950px) {
      display: none;
    }
  }
}

.mainContent {
  height: calc(100svh - 240px);
  overflow-x: visible;
  &[data-status='disabled'] {
    animation: mainAnimatorOut 1s forwards;
  }
  &[data-status='active'] {
    animation: mainAnimatorIn 1s forwards;
  }
  &[data-status='contact'] {
    animation: mainAnimatorRight 1s forwards;
  }
  @media (width <= 1480px) {
    height: max-content;
  }
  &__track {
    position: relative;
    display: flex;
    align-items: center;
    width: max-content;
    height: 100%;
    padding: 0 s.$box-model-viewport-x 0 s.$box-model-viewport-x;
    &:hover {
      cursor: grab;
    }
    &:active {
      cursor: grabbing;
    }
    &[data-status='smooth'] {
      transition: s.$carousel-track-transition;
    }
    @media (width <= 950px) {
      padding: 0;
    }
    &__project {
      flex: 0 1 74.5svw;
      display: flex;
      justify-content: flex-start;
      will-change: width, transform, filter;
      transform-origin: bottom;
      &[data-status='smooth'] {
        transition: all 360ms ease-in-out;
      }
      &[data-status='disabled'] {
        transform: scale(0.8);
        transform-origin: bottom;
        filter: grayscale(85%) sepia(80%) brightness(50%);
      }
      @media (width <= 950px) {
        flex: 0 0 100svw;
      }
      & a {
        display: block;
        height: 100%;
        max-height: inherit;
        &:hover {
          cursor: pointer;
        }
        &:active {
          cursor: grabbing;
        }
        & picture {
          height: inherit;
          max-height: inherit;
        }
        & picture img {
          display: block;
          width: 100%;
          height: 100%;
          object-fit: contain;
          filter: brightness(92%);
        }
      }
    }
  }
}

